[package]
name = "twitch_online"
version = "0.1.0"
authors = ["deathmaz <00maz1987@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12.0"
serde_json = "1.0"
ansi_term = "0.12"
directories = "3.0"
