[package]
name = "twitch-online"
version = "0.1.0"
authors = ["deathmaz <00maz1987@gmail.com>"]
edition = "2021"

[[bin]]
name = "twitch-online"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
serde_json = "1.0"
ansi_term = "0.12"
directories = "3.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17"
